--- a/Index.html
+++ b/Index.html
@@ -395,7 +395,7 @@
                     <path d="M3,3 L9,8 L7,9 L13,13 L11,14 L20,20" stroke="#3d9eff" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="bevel" style="filter: drop-shadow(0 0 2px rgba(61,158,255,0.5));"/>
                 </svg>
 
-                <a href="https://t.me/shohrukhposts" target="_blank" rel="noopener noreferrer" class="logo-link">
+                <a href="https://t.me/IELTS_AGE" target="_blank" rel="noopener noreferrer" class="logo-link">
                     <img src="https://pub-a3ed3eec4ae344b4917067de0a9376f1.r2.dev/20231027_164620_0000-photoaidcom-cropped.png" alt="CDI Logo" class="electric-logo" style="width: 85px; height: 85px; object-fit: contain; border-radius: 10px;">
                 </a>
 
@@ -439,7 +439,7 @@
                 <span style="font-size: 15px;">▶</span> Start only when you're ready to take it seriously.
             </button>
 
-            <p style="font-size: 9px; color: #666; margin-top: 15px;">© CDI Platform by @shohrukhposts</p>
+            <p style="font-size: 9px; color: #666; margin-top: 15px;">© CDI Platform by @IELTS_AGE</p>
         </div>
     </div>
 
@@ -454,11 +454,11 @@
 
             <!-- Center section - Telegram link -->
             <div class="flex-1 flex justify-center px-4">
-                <a href="https://t.me/shohrukhposts" target="_blank" class="inline-flex items-center gap-2 text-sm font-semibold text-blue-700 bg-blue-50 border border-blue-200 px-3 py-1 rounded-full shadow-sm hover:bg-blue-100 hover:text-blue-900 transition-colors">
+                <a href="https://t.me/IELTS_AGE" target="_blank" class="inline-flex items-center gap-2 text-sm font-semibold text-blue-700 bg-blue-50 border border-blue-200 px-3 py-1 rounded-full shadow-sm hover:bg-blue-100 hover:text-blue-900 transition-colors">
                     <svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
                         <path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/>
                     </svg>
-                    @shohrukhposts
+                    @IELTS_AGE
                 </a>
             </div>
 
@@ -677,7 +677,7 @@
                 </ul>
                 <div style="margin: 4px 0;">
                     <span style="font-weight: 600; font-size: 11px;">🆓 FREE DEMO TESTS</span>
-                    <a href="https://t.me/shohrukhposts/1091" target="_blank" style="display: inline-block; margin-left: 6px; padding: 4px 10px; background: #2563eb; color: white; font-weight: 600; border-radius: 15px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); text-decoration: none; font-size: 10px; vertical-align: middle;" onmouseover="this.style.background='#1d4ed8'" onmouseout="this.style.background='#2563eb'">Try Demo</a>
+                    <a href="https://t.me/IELTS_AGE/1091" target="_blank" style="display: inline-block; margin-left: 6px; padding: 4px 10px; background: #2563eb; color: white; font-weight: 600; border-radius: 15px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); text-decoration: none; font-size: 10px; vertical-align: middle;" onmouseover="this.style.background='#1d4ed8'" onmouseout="this.style.background='#2563eb'">Try Demo</a>
                 </div>
                 <div style="margin-top: 6px;">
                     <span style="font-weight: 600; font-size: 11px;">🛫 Price:</span><br>
